--- a/ProjectManager.Web/src/index.html
+++ b/ProjectManager.Web/src/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html> <!--  Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 4 Author: KeenThemes Website: http://www.keenthemes.com/ Contact: support@keenthemes.com Follow: www.twitter.com/keenthemes Dribbble: www.dribbble.com/keenthemes Like: www.facebook.com/keenthemes Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project. -->
+﻿<!DOCTYPE html> <!--  Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 4 Author: KeenThemes Website: http://www.keenthemes.com/ Contact: support@keenthemes.com Follow: www.twitter.com/keenthemes Dribbble: www.dribbble.com/keenthemes Like: www.facebook.com/keenthemes Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project. -->
 <html lang="en" appunwraptag="" >
 <!-- begin::Head -->
 <head>
 <meta charset="utf-8" />
 <title>
-Metronic | Dashboard
+Project Manager
 </title>
 <base href="/">
 <meta name="description" content="Latest updates and statistic charts">
@@ -36,6 +36,6 @@ Please wait...
 </div>
 </div>
 <!-- end::Page loader -->         <!-- end::Body -->
-<body class="m-page--loading-non-block m-page--fluid m--skin- m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-dark m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default"  ></body>
+<body class="m-page--loading-non-block m-page--fluid m--skin- m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-dark m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default" style="zoom:0.8"></body>
 <!-- end::Body -->
 </html>
